# blackbox

./: .env.example  .gitignore  LICENSE  Makefile  README.md  env.example
blackbox-cli/: .gitignore  go.mod  main.go
blackbox-cli/cmd/: models.go  root.go  stat.go  stream.go
blackbox-cli/internal/client/: client.go
blackbox-cli/internal/config/: config.go
blackbox-cli/internal/model/: snapshot.go
blackbox-cli/internal/ui/: charts.go  config.go  dashboard.go  deploy.go  input.go  models.go  render.go  utils.go
blackbox-cli/internal/utils/: logger.go
blackbox-dashboard/: .env.example  .gitignore  README.md  SETUP_CLAUDE.md  api.py  data_collector.py  database.py  main.py  pyproject.toml  requirements.txt  start-dashboard.sh  vram_monitor.py
blackbox-dashboard/blackbox_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
blackbox-dashboard/static/: dashboard.js  index.html
blackbox-server/: CMakeLists.txt  CMakeLists_test.txt  GITHUB_SETUP.md  INSTALL.md  README.md  RELEASE_STEPS.md  SETUP.md  blackbox-server_1.0.0.deb  test_nvidia_apis.cpp
blackbox-server/blackbox-server_1.0.0/DEBIAN/: control  postinst  prerm
blackbox-server/blackbox-server_1.0.0/usr/lib/blackbox-server/: chat_qwen.py  parse_vram.py
blackbox-server/debian/: PUBLISH.md  README.DEB  blackbox-server.service  changelog  control  copyright  install  postinst  prerm  rules
blackbox-server/docs/: API.md  IMPLEMENTATION.md  README.md  SETUP.md
blackbox-server/include/: vram_types.h
blackbox-server/include/infra/: http_server.h
blackbox-server/include/services/: aggregation_service.h  deploy_service.h  hf_deploy.h  model_manager.h  nsight_utils.h  nvml_utils.h  optimization_service.h  spindown_service.h  vllm_client.h  vram_tracker.h
blackbox-server/include/utils/: env_utils.h  json_parser.h  json_serializer.h  logger.h
blackbox-server/py_script/: parse_vram.py
blackbox-server/scripts/: MANUAL_PACKAGE.md  build_deb_manual.sh  build_test.sh  fix_firewall.sh  install_deps.sh  install_from_github.sh  mock_server.py  parse_vram.py  setup.sh  setup_apt_repo.sh
blackbox-server/src/: main.cpp
blackbox-server/src/configs/: A100.yaml  H100.yaml  L40.yaml  T4.yaml
blackbox-server/src/infra/: http_server.cpp  main.cpp
blackbox-server/src/services/: aggregation_service.cpp  deploy_service.cpp  hf_deploy.cpp  model_manager.cpp  nsight_utils.cpp  nvml_utils.cpp  optimization_service.cpp  spindown_service.cpp  vllm_client.cpp  vram_tracker.cpp
blackbox-server/src/utils/: env_utils.cpp  json_parser.cpp  json_serializer.cpp  logger.cpp
scripts/: common.sh  install_deps.sh  setup.sh
